--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
-body {
-    font-family: 'Josefin Sans', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
+body {
+    position: relative;
+    font-family: 'Josefin Sans', sans-serif;
+    
+}
+
+main {
+    background-image: url(images/bg-pattern-desktop.svg);
+    max-width: 1000px;
+    height: 900px;
+    margin: auto;
+    padding: 4px;
 }
 
 .attribution { 
@@ -13,24 +26,47 @@ body {
     color: hsl(99, 45%, 44%); 
     
 }
+
+picture#logo {
+    position: absolute;
+    left: 0%;
+    
+}
+
+h1 {
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 300px;
+}
+
 picture {
-    display: inline;
-    position: relative;
-    left: 50%;
+    float: right;
+    border: transparent thin solid;
+    padding: 5px;
+    margin: 0px 10px 10px 0;
+    max-width: 40vw;
 }
 
 section {
-    background-color: aqua;
-    max-width: 50vw;
+    position: absolute;
+    bottom: 50%;
+    max-width: 400px;
 }
 
-div {
-    background-color: aquamarine;
-    border-radius: 50px;
-    max-width: 20em;
+div#texto {
+    border: transparent thin solid;
+    background-color: rgba(127, 255, 212, 0.438);
+    padding: 3px;
+    max-width: 1440px;
+    height: 80vh;
 }
 
 footer {
+    position: absolute;
+    bottom: 0vh;
+    left: 0;
+    right: 0;
+    height: 30px;
     background-color: rgb(0, 0, 0);
     color: white;
+    padding: 0px;
 }
