--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 main {
     background-image: url(images/bg-pattern-desktop.svg);
-    max-width: 1000px;
+    max-width: 1440px;
     height: 900px;
     margin: auto;
     padding: 4px;
@@ -29,13 +29,15 @@ main {
 
 picture#logo {
     position: absolute;
-    left: 0%;
+    left: 5em;
     
 }
 
 h1 {
+    font-variant: small-caps;
+    letter-spacing: 40px;
     font-family: 'Josefin Sans', sans-serif;
-    font-weight: 300px;
+    font-size: 4em;
 }
 
 picture {
@@ -43,21 +45,23 @@ picture {
     border: transparent thin solid;
     padding: 5px;
     margin: 0px 10px 10px 0;
-    max-width: 40vw;
+    max-width: 74vw;
 }
 
 section {
     position: absolute;
-    bottom: 50%;
-    max-width: 400px;
+    bottom: 15em;
+    max-width: 28em;
 }
 
-div#texto {
-    border: transparent thin solid;
-    background-color: rgba(127, 255, 212, 0.438);
-    padding: 3px;
-    max-width: 1440px;
-    height: 80vh;
+section > p {
+    color: hsl(0, 36%, 70%);
+    line-height: 1.5em;
+}
+
+picture#logo {
+    left: 0em;
+    bottom: 37em;
 }
 
 footer {
