--- a/style.css
+++ b/style.css
@@ -2,21 +2,42 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+* {
+    margin: 0px;
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 body {
-    position: relative;
+    background-image: url(images/bg-pattern-desktop.svg);
     font-family: 'Josefin Sans', sans-serif;
     
 }
 
 main {
-    background-image: url(images/bg-pattern-desktop.svg);
     max-width: 1440px;
-    height: 900px;
     margin: auto;
-    padding: 4px;
+}
+div {
+    display: block;
+}
+
+div#fotomodelo {
+    float: right;    
+}
+
+div.texto {
+    height: 50em;
+}
+
+h1 {
+    font-variant: small-caps;
+    letter-spacing: 30px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 4em;
+}
+
+section > p {
+    color: hsl(0, 36%, 70%);
+    line-height: 1.5em;
 }
 
 .attribution { 
@@ -26,51 +47,8 @@ main {
     color: hsl(99, 45%, 44%); 
     
 }
-
-picture#logo {
-    position: absolute;
-    left: 5em;
-    
-}
-
-h1 {
-    font-variant: small-caps;
-    letter-spacing: 40px;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 4em;
-}
-
-picture {
-    float: right;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    max-width: 74vw;
-}
-
-section {
-    position: absolute;
-    bottom: 15em;
-    max-width: 28em;
-}
-
-section > p {
-    color: hsl(0, 36%, 70%);
-    line-height: 1.5em;
-}
-
-picture#logo {
-    left: 0em;
-    bottom: 37em;
-}
-
 footer {
-    position: absolute;
-    bottom: 0vh;
-    left: 0;
-    right: 0;
-    height: 30px;
     background-color: rgb(0, 0, 0);
+    text-align: center;
     color: white;
-    padding: 0px;
 }
