--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@ div {
 }
 
 div > img {
-    margin: 35px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    margin-left: 35px;
 }
 
 div > picture {
@@ -30,23 +32,26 @@ div > picture {
     margin-bottom: 4em;
 }
 
-div.texto {
-}
-
 div.texto h1 {
     text-transform: uppercase;
-    font-size: 3em;
+    line-height: 1.2em;
+    font-size: calc(2em + 3vw);
     letter-spacing: 15px;
+    padding: 10px;
+    width: 360px;
     
 }
 
 div.texto p {
     line-height: 2em;
     margin: 10px;
+    max-width: 28em;
+    padding: 5px;
+    font-size: calc(0.7em + 1vw);
 }
 
 section {
-    max-width: 32%;
+    text-align: center;
 }
 
 .attribution { 
