--- a/style.css
+++ b/style.css
@@ -54,6 +54,24 @@ section {
     text-align: center;
 }
 
+#email {
+    padding: 10px;
+    border: 1px solid gray;
+    font-size: 16px;
+    width: 300px;
+    text-align: center;
+}
+
+#button {
+    padding: 10px 20px;
+    background-color: blue;
+    color: white;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    display: inline-block; 
+}
+
 .attribution { 
     font-size: 12px; text-align: center; 
 }
