--- a/style.css
+++ b/style.css
@@ -37,17 +37,16 @@ div.texto h1 {
     line-height: 1.2em;
     font-size: calc(2em + 3vw);
     letter-spacing: 15px;
-    padding: 10px;
-    width: 360px;
+    margin-left: 1em;
+    width: 300px;
     
 }
 
 div.texto p {
     line-height: 2em;
-    margin: 10px;
     max-width: 28em;
     padding: 5px;
-    font-size: calc(0.7em + 0.7vw);
+    font-size: calc(0.7em + 0.6vw);
 }
 
 section {
